@@ -16,6 +16,8 @@ sunuo (0.3.2) unstable; urgency=low
     (patch from Kai Sassmannshausen)
   * login: optionally limit the number of account creations per IP (patch
     from Patrick Reinhardt)
+  * disable some of the string.Intern() calls because they were poisoning
+    the intern tables
   * added legacy scripts
     - use log4net for logging
     - removed Address from ServerList
